betree/tests/src/snapshots/betree_tests__sparse__sparse write 2.snap
---
source: betree/tests/src/lib.rs
expression: "self.object_store.data_tree().tree_dump().expect(\"Failed to create data tree dump\")"

---
{
  "type": "internal",
  "level": 1,
  "storage": 0,
  "children": [
    {
      "from": null,
      "to": "0000 0000 0000 0000 0000 0143",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 0143",
      "to": "0000 0000 0000 0000 0000 015B",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 015B",
      "to": "0000 0000 0000 0000 0000 0173",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 0173",
      "to": "0000 0000 0000 0000 0000 018B",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 018B",
      "to": "0000 0000 0000 0000 0000 01A3",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 01A3",
      "to": "0000 0000 0000 0000 0000 01BB",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 01BB",
      "to": "0000 0000 0000 0000 0000 01D3",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 01D3",
      "to": "0000 0000 0000 0000 0000 01EB",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 01EB",
      "to": "0000 0000 0000 0000 0000 032F",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 032F",
      "to": "0000 0000 0000 0000 0000 0337",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 8
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 0337",
      "to": "0000 0000 0000 0000 0000 034F",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 034F",
      "to": "0000 0000 0000 0000 0000 0367",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 0367",
      "to": "0000 0000 0000 0000 0000 037F",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 037F",
      "to": "0000 0000 0000 0000 0000 0397",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 0397",
      "to": "0000 0000 0000 0000 0000 03AF",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 03AF",
      "to": "0000 0000 0000 0000 0000 03C7",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 03C7",
      "to": "0000 0000 0000 0000 0000 03DF",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 03DF",
      "to": "0000 0000 0000 0000 0000 03F7",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 03F7",
      "to": "0000 0000 0000 0000 0000 040F",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 040F",
      "to": "0000 0000 0000 0000 0000 0427",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 0427",
      "to": "0000 0000 0000 0000 0000 043F",
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 24
      }
    },
    {
      "from": "0000 0000 0000 0000 0000 043F",
      "to": null,
      "storage": 0,
      "child": {
        "type": "leaf",
        "level": 0,
        "storage": 0,
        "entry_count": 13
      }
    }
  ]
}
